# Capstone-Project--RAG-Chatbot

./: .gitignore  RAG_USAGE.md  pyproject.toml  requirements.txt
Web_Scraper/: edu_scraper.py  prep_entities.py  seed_urls.py
backend/app/: config.py  models.py  routes.py  store.py
frontend/app/: globals.css  page.js
nllb_pipeline/: README.md
pipeline/: split_sentences.py  translate.py
scripts/: edu_scraper.py  seed_urls.py
