[project]
name = "capstone-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch==2.2.2 ; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "numpy<2.0.0",
    "requests>=2.32.5",
    "pdfplumber>=0.11.8",
    "aiohttp>=3.13.2",
    "async-timeout>=5.0.1",
    "langchain>=0.3.27",
    "langchain-groq>=0.3.8",
    "faiss-cpu>=1.13.0",
    "tiktoken>=0.12.0",
    "langchain-community>=0.3.21",
    "langchain-openai>=0.3.35",
    "chromadb>=1.3.5",
    "sentence-transformers>=5.1.2",
    "pypdf>=6.4.0",
    "python-dotenv>=1.2.1",
    "ipykernel>=7.1.0",
    "httpx>=0.28.1",
    "beautifulsoup4>=4.14.2",
    "lxml>=6.0.2",
    "trafilatura>=2.0.0",
    "pypdfium2>=5.1.0",
    "python-docx>=1.2.0",
    "python-slugify>=8.0.4",
    "python-dateutil>=2.9.0.post0",
    "tqdm>=4.67.1",
    "pillow>=10.4.0",
    "pytesseract>=0.3.13",
    "langdetect>=1.0.9",
]

[tool.uv]
required-environments = [
  "sys_platform == 'darwin' and platform_machine == 'x86_64'"
]
